# dphil-thesis

./: .gitignore  CHANGELOG.md  TODOs.md  bibtex.bib  hugo.toml  main.tex  texhead.tex  thesis.bib
.github/workflows/: hugo.yml
.obsidian/: workspace.json
assets/: _custom.scss  _fonts.scss  _print.scss  _titlepage.scss  _toc.scss  paged.scss
config/_default/: hugo.toml
config/pdfgen/: params.toml
content/: _index.md  remove_newlines.sh  unroll.md
content-no-newline/02_quantum/: 01_compilation_no_newline.md  02_basics_no_newline.md  03_quantum_sota_no_newline.md  04_hybrid_no_newline.md  05_need_help_no_newline.md  06_litt_no_newline.md  _index_no_newline.md
content-no-newline/03_compiler/: 01_gts_sota_no_newline.md  02_compgraphs_no_newline.md  03_graph_defs_no_newline.md  04_rewrite_def_no_newline.md  05_gts_no_newline.md  _index_no_newline.md
content-no-newline/04_matching/: 01_assumptions_no_newline.md  02_treereduc_no_newline.md  03_canonical_no_newline.md  04_anchors_no_newline.md  05_prefixincl_no_newline.md  06_benchmarks_no_newline.md  _index_no_newline.md
content-no-newline/05_parallel/: 01_litt_no_newline.md  02_eqsat_no_newline.md  03_persistent-ds_no_newline.md  04_factor_no_newline.md  05_extraction_no_newline.md  _index_no_newline.md
content/01_intro/: 01_compilation.md  (+2 more)
scripts-datagen/: toric32_decoder_timings.cpp
scripts-datagen/toric32_decoder_timings/: CMakeLists.txt  README.md
text/: ch1-intro.tex  ch2-litreview.tex  ch3-quantumsuper.tex  ch4-pattern.tex  ch5-zx.tex  ch6-futcompiler.tex  ch7-conclusion.tex
zola/: config.toml
(+147 files in other folders)
